frontend/tests/cases/negative/nestedWildLinearAbs.gr
foo : (Int, Int) -> Int
foo (_, 0) = 42;
foo (0, _) = 43;
foo (x, y) = x+y
